# aurum

./: .gitignore  AURUM_DEPLOY.md  AURUM_STRATEGY_RETUNE.md  FIX_CHART.md  README.md  dashboard.html  make_replay_fixture.py  setup_project.py
experiments/: exp-002.yaml
journal/: README.md
results/: README.md
xauusd_system/: .env.example  CLAUDE.md  Dockerfile  STRUCTURE.md  backtest_runner.py  diagnose.py  docker-compose.yml  pyproject.toml  run_experiment.py  validation_report.json
xauusd_system/config/: prometheus.yml
xauusd_system/experiments/: README.md  exp-003.yaml  exp-004.yaml  exp-005.yaml  exp-006.yaml  exp-007.yaml  exp-008.yaml  exp-009.yaml  exp-010.yaml  exp-011.yaml  exp-012a.yaml  exp-012b.yaml  exp-014.yaml  exp-015.yaml  exp-016.yaml  exp-017.yaml  exp-018.yaml  exp-019.yaml  exp-020.yaml  exp-021.yaml  exp-022.yaml
xauusd_system/journal/: DEPLOYMENT.md  EXP-001.md  EXP-002.md  EXP-003.md  EXP-004.md  EXP-005.md  EXP-006.md  EXP-007.md  EXP-008.md  EXP-009.md  EXP-010.md  EXP-011.md  EXP-012.md  EXP-013.md  EXP-014.md  EXP-015.md  EXP-016.md  EXP-017.md  EXP-018.md  EXP-019.md  EXP-020.md  EXP-021.md  EXP-022.md  EXP-KELLY.md  README.md  new_experiment.py
xauusd_system/results/: exp-001-rerun.json  exp-002.json  exp-003.json  exp-004.json
xauusd_system/src/: main.py
xauusd_system/src/backtest/: __init__.py  costs.py  data_loader.py  engine.py  run.py  validate.py
xauusd_system/src/core/: config.py  interfaces.py
xauusd_system/src/dashboard/: api.py  state.py
xauusd_system/src/dashboard/static/: index.html
xauusd_system/src/data/: twelvedata_feed.py
xauusd_system/src/execution/: __init__.py  engine.py  logging_config.py  models.py
xauusd_system/src/execution/brokers/: base.py  oanda.py
xauusd_system/src/execution/reconciliation/: reconciler.py
xauusd_system/src/execution/recovery/: network.py
xauusd_system/src/infrastructure/: services.py
xauusd_system/src/orchestrator/: engine.py
xauusd_system/src/orders/: manager.py
xauusd_system/src/paper/: paper_broker.py
xauusd_system/src/risk/: __init__.py  engine.py  models.py
xauusd_system/src/strategy/: signal_generator.py
xauusd_system/tests/: test_all.py  test_backtest_parity.py
