[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "xauusd-trading-system"
version     = "1.0.0"
description = "Production-grade systematic trend-following system for XAU/USD"
requires-python = ">=3.12"

dependencies = [
    "requests==2.32.3",
    "numpy==2.2.6",
    "prometheus-client==0.21.1",
    "python-dotenv==1.1.0",
    "websockets==14.2",
    "uvicorn[standard]==0.34.3",
    "fastapi==0.115.12",
    "aiohttp==3.11.18",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.1.0",
    "mypy==1.15.0",
    "ruff==0.11.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
python_files = ["test_*.py"]
pythonpath   = ["src"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
